# amigapetmate

./: .gitignore  Install  LICENSE  PetMate.guide  PetMate.readme  PetMate.readme.info  README.md
Installer/: Install  Install.info  Makefile
catalogs/: Makefile  PetMate.cd
catalogs/da/: PetMate.catalog  PetMate.catalog.uaem  PetMate.ct  PetMate.guide
catalogs/de/: PetMate.catalog  PetMate.catalog.uaem  PetMate.ct  PetMate.guide
catalogs/es/: PetMate.catalog  PetMate.catalog.uaem  PetMate.ct  PetMate.guide
catalogs/fr/: PetMate.catalog  PetMate.catalog.uaem  PetMate.ct  PetMate.guide
catalogs/it/: PetMate.catalog  PetMate.catalog.uaem  PetMate.ct  PetMate.guide
catalogs/pl/: PetMate.catalog  PetMate.catalog.uaem  PetMate.ct  PetMate.guide
giflib/: CMakeLists.txt  config.h.amiga  dgif_lib.c  egif_lib.c  gif_compat.h  gif_hash.c  gif_hash.h  gif_lib.h
src/: CMakeLists.txt  PetMate.info  appsettings.c  appsettings.h  bdbprintf.c  bdbprintf.h  boopsimainwindow.c  boopsimainwindow.h  boopsimessage.c  boopsimessage.h  class_charlayout.c  class_charlayout.h  class_colorswatch.c  class_colorswatch.h  class_layoutwithpopup.c  class_layoutwithpopup.h  compilers.h  fastdiv68k.h  findtables.c  gadgetid.h  makefile  petmate.c  petmate.h  petmate_todo.txt  petscii_ascii.c  petscii_ascii.h  petscii_brush.c  petscii_brush.h  petscii_cellpx.h  petscii_charset.c  petscii_charset.h  petscii_chartransform.c  petscii_chartransform.h  petscii_export.h  petscii_export_asm.c  petscii_export_bas.c  petscii_export_datatype.c  petscii_export_gif.c  petscii_export_gif.h  petscii_export_ilbm.c  (+46 more)
src/CharSelector/: char_selector.h  char_selector_private.h  class_charselector_attribs.c  class_charselector_dispatch.c  class_charselector_handleinput.c  class_charselector_lib.c  class_charselector_render.c  petmate_charset.c  petmate_charset.h
src/ColorPicker/: class_colorpicker_attribs.c  class_colorpicker_dispatch.c  class_colorpicker_handleinput.c  class_colorpicker_lib.c  class_colorpicker_render.c  color_picker.h  color_picker_private.h
src/PetsciiCanvas/: class_petsciicanvas_attribs.c  class_petsciicanvas_dispatch.c  class_petsciicanvas_handleinput.c  class_petsciicanvas_lib.c  class_petsciicanvas_render.c  petscii_canvas.h  petscii_canvas_private.h
src/ScreenCarousel/: class_screencarousel_attribs.c  class_screencarousel_dispatch.c  class_screencarousel_input.c  class_screencarousel_lib.c  class_screencarousel_render.c  screen_carousel_private.h
src/cjson/: cJSON.c  cJSON.h
testfiles/: krabob_logo.petmate
